# MarsLens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
composeApp/: build.gradle.kts
composeApp/libs/: libxlog_core.dylib
composeApp/src/commonMain/kotlin/com/kapp/marslens/: App.kt
composeApp/src/commonMain/kotlin/com/kapp/marslens/di/: Koin.kt
composeApp/src/commonMain/kotlin/com/kapp/marslens/domain/: FilePicker.kt  XlogDecoder.kt
composeApp/src/commonMain/kotlin/com/kapp/marslens/ui/: FileTreeSidebar.kt  FileTreeViewModel.kt  LogViewerScreen.kt  MainViewModel.kt
composeApp/src/commonMain/kotlin/com/kapp/xloggui/: App.kt
composeApp/src/commonMain/kotlin/com/kapp/xloggui/di/: Koin.kt
composeApp/src/commonMain/kotlin/com/kapp/xloggui/domain/: FilePicker.kt  XlogDecoder.kt
composeApp/src/commonMain/kotlin/com/kapp/xloggui/ui/: FileTreeSidebar.kt  FileTreeViewModel.kt  LogViewerScreen.kt  MainViewModel.kt
composeApp/src/desktopMain/kotlin/com/kapp/marslens/: Main.kt
composeApp/src/desktopMain/kotlin/com/kapp/marslens/di/: DesktopModule.kt
composeApp/src/desktopMain/kotlin/com/kapp/marslens/domain/: DesktopFilePicker.kt
composeApp/src/desktopMain/kotlin/com/kapp/xloggui/: Main.kt
composeApp/src/desktopMain/kotlin/com/kapp/xloggui/di/: DesktopModule.kt
docs/: ARCHITECTURE.md
gradle/: libs.versions.toml
rust_core/: Cargo.toml
rust_core/src/: lib.rs
(+7 files in other folders)
